# pyplayer-compressor-10mb

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GitHub_Release.md  Project_Hub.md  README.md  TESTING_RESULTS.md  build_installer.bat  compression.py  config.ini  config.py  conftest.py  constants.py  main.pyw  pyplayer.pyw  pyproject.toml  qtstart.py  update.py  widgets.py
.github/workflows/: ci.yml
.obsidian/: workspace.json
docs/: _index.md
docs/architecture/: app-flow.md  mainwindow-mixins.md  package-structure.md
docs/features/: auto-compress.md  save-and-export.md  trim-workflow.md
docs/integrations/: ffmpeg-and-ffprobe.md  vlc-backend.md
docs/project/: fork-changes.md  known-issues.md  overview.md  repository-map.md
docs/reference/: config-and-paths.md  key-constants.md
docs/superpowers/plans/: 2026-03-22-quick-trim-button.md  2026-03-24-auto-compress-after-trim.md  2026-03-28-repo-restructure.md
docs/superpowers/specs/: 2026-03-22-quick-trim-button-design.md  2026-03-24-auto-compress-after-trim-design.md  2026-03-28-repo-restructure-design.md
docs/testing/: manual-checklist.md  test-strategy.md
executable/: hook.py  main.spec  main_onefile.spec  version_info_updater.txt
packaging/: hook.py  installer.iss  main.spec  main_onefile.spec  updater.spec  version_info_main.txt
scripts/: convert_ui.py
src/pyplayer/: __init__.py  __main__.py  app.py  config.py  constants.py  qthelpers.py  resource_helper.py  update.py  util.py
src/pyplayer/core/: compression.py  config_parser.py  edit.py  ffmpeg.py  file_ops.py  media_utils.py  probe.py
src/pyplayer/gui/: __init__.py  helpers.py  main_window.py  progress.py  shortcuts.py  signals.py  tray.py
src/pyplayer/ui/: __init__.py  window_about.py  window_cat.py  window_pyplayer.py  window_settings.py  window_text.py
src/pyplayer/widgets/: __init__.py  draggable.py  helpers.py  inputs.py  overlays.py  (+5 more)
tests/: __init__.py  conftest.py
tests/core/: test_compression.py  test_ffmpeg.py  test_file_ops.py  test_media_utils.py
(+15 files in other folders)
