[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyplayer"
version = "0.6.0"
description = "Powerful video player and editor built on VLC and PyQt5"
requires-python = ">=3.13"
dependencies = [
    "PyQt5>=5.15.9",
    "python-vlc>=3.0.18122",
    "pillow>=9.5.0",
    "requests>=2.31.0",
    "pywin32>=306;sys_platform=='win32'",
    "colour>=0.1.5",
    "filetype>=1.0.13",
    "tinytag>=1.9.0",
    "music-tag>=0.4.3",
    "Send2Trash>=1.8.2",
]

[project.gui-scripts]
pyplayer = "pyplayer.app:main"

[project.optional-dependencies]
build = ["pyinstaller>=5.13.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyplayer = ["py.typed"]

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "single"
